<resources>
    <string name="app_name">PokeTest</string>
    <string name="btn_start">Comenzar</string>
    <string name="txt_title_pokemon">Gotta catch\'em all!</string>
    <string name="txt_detail_app">Usa tu pokedex para concer toda la información de los Pokemon. Registra todos los que tengas</string>
    <string name="txt_have_account">¿Ya tienes una cuenta, haz click aquí</string>
    <string name="btn_back">Regresar</string>
    <string name="btn_next">Siguiente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_create_account">Crear cuenta</string>
    <string name="txt_add_next_data">Ingresa los siguientes datos:</string>
    <string name="txt_hint_names">Nombre(s)</string>
    <string name="txt_lastname">Apellidos</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="txt_email">Correo electrónico</string>
    <string name="txt_tems_conditions">Aceptar términos y condiciones</string>
    <string name="txt_url">https://www.google.com</string>
    <string name="txt_title_verify_email">Verifica tu correo electrónico</string>
    <string name="txt_subtitle_verify_code">Hemos enviado un código de verificación a tu correo. Ayúdanos a ingresarlo para poder continuar.</string>
    <string name="txt_get_verification_code">Código de verificación</string>
    <string name="txt_btn_sent_code_again">Reenviar código</string>
    <string name="txt_tittle_create_password">Crea una contraseña de acceso</string>
    <string name="txt_create_password">Crea una contraseña que cumpla con las siguientes reglas:</string>
    <string name="txt_eight_characters">8 Caracteres</string>
    <string name="txt_a_number">Al menos un número</string>
    <string name="txt_a_special_character">Al menos un caracter especial</string>
    <string name="txt_a_lowercase">Al menos una minúscula</string>
    <string name="txt_a_uppercase">Al menos una mayúscula</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_repeat_password">Confirmar contraseña</string>
    <string name="txt_version_app">V 1.0</string>
    <string name="txt_forget_password">olvidé mi contraseña</string>
    <string name="txt_login">Iniciar sesión</string>
    <string name="txt_nav_home">Inicio</string>
    <string name="txt_nav_pokedex">Pokedex</string>
    <string name="txt_nav_pokemon">Pokemon</string>
    <string name="txt_title_pokedex">Pokedex</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_pokemon">Pokémon</string>
    <string name="txt_new_pokemon">Nuevo Pókemon</string>
    <string name="txt_subtitle_new_pokemon">Ingresa los siguientes datos para registrar un nuevo Pókemon</string>
    <string name="txt_pokemon_name">Nombre del Pókemon</string>
    <string name="txt_add_new_pokemon">Agregar nuevo Pókemon</string>
    <string name="txt_type">Tipo:</string>
    <string name="txt_add_pokemon">Agregar</string>
    <string name="txt_subtitle_update">Ingresa los siguientes datos para actualizar un Pókemon</string>
    <string name="txt_btn_update">Actualizar</string>
    <string name="txt_update_screen_flow_tag">UPDATE_FLOW</string>
    <string name="txt_title_update">Actualizar Pókemon</string>
    <string name="txt_pokemon_name_selected_flag">POKEMON_NAME_SELECTED</string>
    <string name="txt_pokemon_type_selected_flag">POKEMON_TYPE_SELECTED</string>
    <string name="txt_question_cancel_pokemon_register">¿Estás seguro que desas cancelar el registro?</string>
    <string name="txt_alert_btn_stay">Permanecer</string>
    <string name="txt_alert_btn_exit">Salir</string>
    <string name="txt_question_update_pokemon">¿Estás seguro que desas cancelar la actualización de los datos del Pókemon %s?</string>
    <string name="txt_this_pokemon_already_exist">Este pokémon ya existe</string>
    <string name="txt_pokemon_updated">Los datos de %s han sido actualizados exitosamente.</string>
    <string name="txt_pokemon_type">Tipo:</string>
    <string name="txt_pokemon_info">Información:</string>
    <string name="txt_login_with_biometric">Iniciar sesión con huella digital</string>
    <string name="txt_open_drawer">Abierto</string>
    <string name="txt_close_drawer">Cerrado</string>

    <string name="google_maps_api_key">AIzaSyCMrpf5Ilf_kwOOUy3LfG_aMPgf-zRXhWI</string>
    <string name="txt_notifications">Notificaciones</string>
    <string name="txt_share_app">Compartir App</string>
    <string name="txt_about">Acerca de ...</string>
    <string name="txt_logout">Cerrar sesión</string>
</resources>