<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/group_main"
        android:title="Principal">

        <menu>
            <item
                android:id="@+id/item_notifications"
                android:enabled="true"
                android:icon="@drawable/ic_notifications"
                android:title="@string/txt_notifications" />
            <item
                android:id="@+id/item_share"
                android:enabled="true"
                android:icon="@drawable/ic_share"
                android:title="@string/txt_share_app" />
            <item
                android:id="@+id/item_info"
                android:enabled="true"
                android:icon="@drawable/ic_info"
                android:title="@string/txt_about" />
        </menu>
    </item>

    <item
        android:id="@+id/group_social_media"
        android:title="Social Media">
        <menu>

            <item
                android:id="@+id/item_facebook"
                android:enabled="true"
                android:icon="@drawable/ic_user"
                android:title="Facebook" />

            <item
                android:id="@+id/item_twitter"
                android:enabled="true"
                android:icon="@drawable/ic_birthday"
                android:title="Twitter" />

            <item
                android:id="@+id/item_instagram"
                android:enabled="true"
                android:icon="@drawable/ic_rotate_sprite"
                android:title="Instagram" />
        </menu>
    </item>
</menu>